# bc39

./: .gitignore  CMakeLists.txt  Doxyfile  README  bc39demo.pro  dialog.cc  dialog.ui
bc39/: bc39.cc  bc39.h
example/: CMakeLists.txt  dialog.cc  dialog.h  dialog.ui  main.cc
src/: CMakeLists.txt  bc39.cc
